--- a/OrgStructure/share/src/main/java/META-INF/ru/it/lecm/orgstructure/orgstructure-tree.css
+++ b/OrgStructure/share/src/main/java/META-INF/ru/it/lecm/orgstructure/orgstructure-tree.css
@@ -15,3 +15,29 @@
 .dropTarget{
     background-color:yellow;
 }
+
+span.insitu-edit-unit
+{
+    background-image: url(/share/res/components/images/edit-16.png);
+    background-repeat: no-repeat;
+    cursor: pointer;
+    height: 16px;
+    margin-left: 15px;
+    opacity: 0;
+    position: absolute;
+    visibility: hidden;
+    width: 16px;
+}
+
+span.insitu-add-unit
+{
+    background-image: url(/share/res/components/images/plus-16.png);
+    background-repeat: no-repeat;
+    cursor: pointer;
+    height: 16px;
+    margin-left: 35px;
+    opacity: 0;
+    position: absolute;
+    visibility: hidden;
+    width: 16px;
+}
