--- a/OrgStructure/share/src/main/java/META-INF/ru/it/lecm/orgstructure/orgstructure-tree.css
+++ b/OrgStructure/share/src/main/java/META-INF/ru/it/lecm/orgstructure/orgstructure-tree.css
@@ -22,7 +22,7 @@ span.insitu-edit-unit
     background-repeat: no-repeat;
     cursor: pointer;
     height: 16px;
-    margin-left: 15px;
+    margin-left: 35px;
     opacity: 0;
     position: absolute;
     visibility: hidden;
@@ -35,7 +35,19 @@ span.insitu-add-unit
     background-repeat: no-repeat;
     cursor: pointer;
     height: 16px;
-    margin-left: 35px;
+    margin-left: 15px;
+    opacity: 0;
+    position: absolute;
+    visibility: hidden;
+    width: 16px;
+}
+span.insitu-delete-unit
+{
+    background-image: url(/share/res/components/images/minus-16.png);
+    background-repeat: no-repeat;
+    cursor: pointer;
+    height: 16px;
+    margin-left: 55px;
     opacity: 0;
     position: absolute;
     visibility: hidden;
