Более точные селекторы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@267 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1,22 +1,22 @@
 /* My Styles */
 
-.header{
+#alf-hd .header{
   height : 70px;
   background-position: right top;
   background-image: url(/share/res/themes/lecmTheme/images/lecmUI/header-right.png) !important;
 }
 
-.app-items{
+#alf-hd .header .app-items{
 position : relative;
 top : -25px;
 }
 
-.app-items > span > span > a {
+#alf-hd .header .app-items > span > span > a {
  position: relative;
  top: 17px;
 }
 
-.app-items > span > span > button {
+#alf-hd .header .app-items > span > span > button {
  position: relative;
  top: 17px;
 }
