кастомизировал вид формы для создания/редактирования доверенностей
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@360 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-delegation/share/src/main/webapp/css/ru/it/lecm/delegation/delegation-datagrid.css
+++ b/lecm-delegation/share/src/main/webapp/css/ru/it/lecm/delegation/delegation-datagrid.css
@@ -278,25 +278,22 @@
    background-image: url('./images/plus-16.png');
 }
 
-.datagrid .onActionView a
-{
-   background-image: url('./images/list-16.png');
-}
-
-.datagrid .onActionEdit a
-{
+.datagrid .onActionEdit a {
    background-image: url('./images/edit-16.png');
 }
 
-.datagrid .onActionDuplicate a
-{
+.datagrid .onActionDelete a {
+   background-image: url('./images/delete-row-16.png');
+}
+
+.datagrid .onActionRevoke a {
    background-image: url('./images/duplicate-row-16.png');
 }
 
-.datagrid .onActionDelete a
-{
-   background-image: url('./images/delete-row-16.png');
+.datagrid .onActionPropogate a {
+   background-image: url('./images/duplicate-row-16.png');
 }
+
 
 /* Forms */
 
