Импорт CSV. Изменены иконки кнопок. Кнопка импорта активируется только при выборе значения в таблице.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@386 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/java/META-INF/ru/it/lecm/dictionary/dictionary-toolbar.css
+++ b/lecm-dictionary/share/src/main/java/META-INF/ru/it/lecm/dictionary/dictionary-toolbar.css
@@ -18,3 +18,13 @@
 	display: inline-block;
 	vertical-align: text-bottom;
 }
+.datalist-toolbar .file-import-csv span.first-child
+{
+	background: url(/share/res/components/images/details-16.png) no-repeat 12px 4px;
+	padding-left: 24px;
+}
+.datalist-toolbar .file-import-xml span.first-child
+{
+	background: url(/share/res/components/images/task-16.png) no-repeat 12px 4px;
+	padding-left: 24px;
+}
