--- a/lecm-statemachine-editor/share/src/main/webapp/css/statemachine/editor.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/statemachine/editor.css
@@ -16,6 +16,11 @@
 	width: 150px;
 }
 
+.status_name {
+	cursor: pointer;
+	text-decoration: underline;
+}
+
 .actions_cont {
 	float: right;
 	border-left: 1px solid #808080;
@@ -37,8 +42,14 @@
 	padding: 5px 0 5px 0;
 }
 
+.action_name_header {
+	float: left;
+}
+
 .action_name {
 	float: left;
+	cursor: pointer;
+	text-decoration: underline;
 }
 
 .action_results_cont {
@@ -55,4 +66,30 @@
 .add_action {
 	background: URL('/share/res/components/images/add-icon-16.png') 0 0 no-repeat;
 	cursor: pointer;
+}
+
+span.insitu-edit-unit
+{
+	background-image: url(/share/res/components/images/edit-16.png);
+	background-repeat: no-repeat;
+	cursor: pointer;
+	height: 16px;
+	margin-left: 10px;
+	opacity: 0;
+	position: absolute;
+	visibility: hidden;
+	width: 16px;
+}
+
+span.insitu-delete-unit
+{
+	background-image: url(/share/res/components/images/delete-16.png);
+	background-repeat: no-repeat;
+	cursor: pointer;
+	height: 16px;
+	margin-left: 30px;
+	opacity: 0;
+	position: absolute;
+	visibility: hidden;
+	width: 16px;
 }
