--- a/OrgStructure/share/src/main/webapp/css/blocks/orgstructure-toolbar.css
+++ b/OrgStructure/share/src/main/webapp/css/blocks/orgstructure-toolbar.css
@@ -1,10 +1,32 @@
-.search span.first-child
+.datalist-toolbar .search span.first-child
 {
-    background: url(/share/res/components/images/search-16-gray.png) no-repeat 12px 4px;
+    background: url('/share/res/components/images/search-16-gray.png') no-repeat 12px 4px;
     padding-left: 24px;
 }
+
+.datalist-toolbar .ex-search span.first-child
+{
+    background: url('/share/res/components/images/search-16-gray.png') no-repeat 12px 4px;
+    padding-left: 24px;
+}
+
 .search-input
 {
     display: inline-block;
     vertical-align: text-bottom;
+}
+
+#searchBlock .bd
+{
+
+}
+
+#searchBlock-content .search .form-buttons {
+    display:none;
+}
+
+#searchBlock-content  .search .search-icon span.first-child {
+    background: url("../images/search-16.png") no-repeat scroll 12px 4px transparent;
+    padding-left: 24px;
+    text-align: center;
 }
