--- a/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-toolbar.css
+++ b/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-toolbar.css
@@ -1,30 +1,49 @@
-.datalist-toolbar .exportcsv span.first-child
-{
-	background: url(/share/res/components/images/task-16.png) no-repeat 12px 4px;
-	padding-left: 24px;
+.datalist-toolbar .left,
+.datalist-toolbar .left > div,
+.datalist-toolbar .right {
+    line-height: 24px;
 }
-.datalist-toolbar .delete-row span.first-child
-{
-	background: url(/share/res/components/images/delete-row-16.png) no-repeat 12px 4px;
-	padding-left: 24px;
+.datalist-toolbar .left > div {
+    padding-right: 20px;
 }
-.datalist-toolbar .search span.first-child
-{
-	background: url(/share/res/components/images/search-16-gray.png) no-repeat 12px 4px;
-	padding-left: 24px;
+
+.datalist-toolbar .exportcsv button {
+    background: url(/share/res/components/images/task-16.png) no-repeat 5px 5px;
 }
-.datalist-toolbar .search-input
-{
-	display: inline-block;
-	vertical-align: text-bottom;
+
+.datalist-toolbar .delete-row button {
+    background: url(/share/res/components/images/delete-row-16.png) no-repeat 5px 5px;
 }
-.datalist-toolbar .file-import-csv span.first-child
-{
-	background: url(/share/res/components/images/details-16.png) no-repeat 12px 4px;
-	padding-left: 24px;
+
+.datalist-toolbar .search button {
+    background: url(/share/res/components/images/search-16-gray.png) no-repeat 5px 5px;
 }
-.datalist-toolbar .file-import-xml span.first-child
-{
-	background: url(/share/res/components/images/details-16.png) no-repeat 12px 4px;
-	padding-left: 24px;
+
+.datalist-toolbar .search-input {
+    display: inline-block;
+    vertical-align: text-bottom;
+    margin-top: 2px;
 }
+/*import csv block*/
+.datalist-toolbar .import-csv {
+    position: relative;
+}
+.datalist-toolbar .import-csv #show-import-csv {
+    width: 24px;
+    height: 24px;
+    background: url("../../components/images/details-16.png") no-repeat 5px 5px;
+    cursor: pointer;
+}
+.datalist-toolbar .import-csv .form-container {
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 0;
+    opacity: 0;
+    overflow: hidden;
+    cursor: pointer;
+}
+.datalist-toolbar .import-csv .form-container input {
+    cursor: pointer;
+}
+
