CSS стили для селекта с кнопкой добавления
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@438 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1499,11 +1499,11 @@ div.theme-bg-color-7
 div.selectone-control select, button {
     border: 1px solid #ccc;
     border-radius: 3px;
-
     height:2em;
-
     vertical-align: bottom;
     margin: 0;
+    font-color: red;
+    color: #494949;
 }
 
 div.selectone-control select{
