--- a/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-toolbar.css
+++ b/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-toolbar.css
@@ -6,37 +6,31 @@
 .datalist-toolbar .left > div {
     padding-right: 20px;
 }
-
 .datalist-toolbar .exportcsv button {
     background: url(/share/res/components/images/task-16.png) no-repeat 5px 5px;
 }
-
 .datalist-toolbar .delete-row button {
     background: url(/share/res/components/images/delete-row-16.png) no-repeat 5px 5px;
 }
-
+.datalist-toolbar .import-csv button {
+    background: url("../../components/images/details-16.png") no-repeat 5px 5px;
+    cursor: pointer;
+}
 .datalist-toolbar .search button {
     background: url(/share/res/components/images/search-16-gray.png) no-repeat 5px 5px;
 }
-
 .datalist-toolbar .search-input {
     display: inline-block;
     vertical-align: text-bottom;
-    margin-top: 2px;
+    margin-top: 4px;
 }
 /*import csv block*/
 .datalist-toolbar .import-csv {
     position: relative;
 }
-.datalist-toolbar .import-csv #show-import-csv {
-    width: 24px;
-    height: 24px;
-    background: url("../../components/images/details-16.png") no-repeat 5px 5px;
-    cursor: pointer;
-}
 .datalist-toolbar .import-csv .form-container {
-    width: 24px;
-    height: 24px;
+    width: 33px;
+    height: 29px;
     position: absolute;
     top: 0;
     opacity: 0;
