[~] Редактор машины состояний
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@447 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/share/src/main/webapp/css/statemachine/editor.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/statemachine/editor.css
@@ -60,6 +60,7 @@
 .add_status {
 	background: URL('/share/res/components/images/add-icon-16.png') 0 0 no-repeat;
 	padding-left: 18px;
+	margin-right: 10px;
 	cursor: pointer;
 }
 
