CSS стили для селекта с кнопкой добавления
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@450 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1505,10 +1505,9 @@ div.selectone-control select {
     height:28px;
     min-width: 250px;
     vertical-align: bottom;
-    margin: 0;
     padding: 0;
 
-    /*background-color: green;*/
+    /*background-color: yellow;*/
 }
 
 .yui-push-button,
