Удалена подствека элемента дерева справочника при разворачивании
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@454 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-tree.css
+++ b/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-tree.css
@@ -15,3 +15,12 @@
 .dropTarget{
     background-color:yellow;
 }
+.ygtvfocus{
+	background-color:white!important;
+}
+.ygtvfocus .ygtvlabel,
+.ygtvfocus .ygtvlabel:link,
+.ygtvfocus .ygtvlabel:visited,
+.ygtvfocus .ygtvlabel:hover{
+	background-color:white!important;
+}
