--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1496,18 +1496,39 @@ div.theme-bg-color-7
    border: 1px solid #DDD6A0;
 }
 
-div.selectone-control select {
+input[type="text"] {
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    color: #494949;
+}
+
+div.form-field input[type="text"] {
+    height:25px;
+    padding: 0;
+}
+
+div.form-field input[type="text"].yui-ac-input {
+    min-width: 260px;
+    width: 0;
+    vertical-align: bottom;
+    position: relative;
+
+    /*background-color: yellow;*/
+}
+
+div.form-field select {
     border: 1px solid #ccc;
     border-radius: 3px;
 
     color: #494949;
 
     height:28px;
-    min-width: 250px;
+    min-width: 262px;
     vertical-align: bottom;
     padding: 0;
+    margin-right: 2px;
 
-    /*background-color: yellow;*/
+    /*background-color: #9acd32;*/
 }
 
 .yui-push-button,
@@ -1515,9 +1536,25 @@ div.selectone-control select {
     border-radius: 3px;
 }
 
-span.create_new_button .yui-button .first-child {
-    background: url(images/create_new_button.png) no-repeat center center;
-
+div.form-field .yui-push-button,
+div.form-field .yui-button .first-child {
     height: 26px;
+}
+
+span.create-new-button .yui-button {
+    margin: 0;
+}
+
+span.create-new-button .yui-button .first-child {
+    background: url(images/create_new_button.png) no-repeat center center;
     width: 26px;
+}
+
+span.tree-picker-button .yui-button .first-child {
+    background-color: #C5DA5D;
+}
+
+span.tree-picker-button .yui-button .first-child button {
+    color: white;
+    font-weight: 900;
 }
