Стилизация шаблона base-page
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@463 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/webapp/css/blocks/orgstructure-toolbar.css
+++ b/lecm-orgstructure/share/src/main/webapp/css/blocks/orgstructure-toolbar.css
@@ -1,30 +1,24 @@
-.datalist-toolbar .search span.first-child
-{
-    background: url('/share/res/components/images/search-16-gray.png') no-repeat 12px 4px;
-    padding-left: 24px;
+.datalist-toolbar .search span.first-child,
+.datalist-toolbar .ex-search span.first-child {
+    width: 26px;
+    height: 26px;
 }
-
-.datalist-toolbar .ex-search span.first-child
-{
-    background: url('/share/res/components/images/search-16-gray.png') no-repeat 12px 4px;
-    padding-left: 24px;
+.datalist-toolbar .right > span:first-child {
+    margin-top: 4px;
 }
-
-.search-input
-{
+.datalist-toolbar .search span.first-child {
+    background: url('/share/res/components/images/search-16-gray.png') no-repeat 5px 5px;
+}
+.datalist-toolbar .ex-search span.first-child {
+    background: url('/share/res/components/images/search-16-gray.png') no-repeat 5px 5px;
+}
+.search-input {
     display: inline-block;
     vertical-align: text-bottom;
 }
-
-#searchBlock .bd
-{
-
-}
-
 #searchBlock-content .search .form-buttons {
-    display:none;
+    display: none;
 }
-
 #searchBlock-content  .search .search-icon span.first-child {
     background: url("../images/search-16.png") no-repeat scroll 12px 4px transparent;
     padding-left: 24px;
