Перенос js и css (base_share) в web_apps
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@468 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1576,7 +1576,7 @@ div.form-field input[type="text"].yui-ac-input {
     min-width: 260px;
     width: 0;
     vertical-align: bottom;
-    position: relative;
+    position: static;
 
     /*background-color: yellow;*/
 }
