--- a/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/all-dictionary-toolbar.css
+++ b/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/all-dictionary-toolbar.css
@@ -1,31 +1,31 @@
-.dictionary-toolbar {
+.datalist-toolbar {
     margin: 0 -10px;
 }
-.dictionary-toolbar .header-bar {
+.datalist-toolbar .header-bar {
     min-height: 2em;
     padding: 4px 1em;
 }
-.dictionary-toolbar .left,
-.dictionary-toolbar .left > div {
+.datalist-toolbar .left,
+.datalist-toolbar .left > div {
     float: left;
     line-height: 24px;
 }
-.dictionary-toolbar .left > div {
+.datalist-toolbar .left > div {
     padding-right: 20px;
 }
-.dictionary-toolbar .right {
+.datalist-toolbar .right {
     float: right;
 }
 
 /*import xml block*/
-.dictionary-toolbar .import-xml {
+.datalist-toolbar .import-xml {
     position: relative;
 }
-.dictionary-toolbar .import-xml button {
+.datalist-toolbar .import-xml button {
     background: url("../../images/lecm-dictionary/xml-file-16.png") no-repeat 5px 5px;
     cursor: pointer;
 }
-.dictionary-toolbar .import-xml .form-container {
+.datalist-toolbar .import-xml .form-container {
     width: 33px;
     height: 29px;
     position: absolute;
@@ -34,6 +34,6 @@
     overflow: hidden;
     cursor: pointer;
 }
-.dictionary-toolbar .import-xml .form-container input {
+.datalist-toolbar .import-xml .form-container input {
     cursor: pointer;
 }
