--- a/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-toolbar.css
+++ b/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-toolbar.css
@@ -40,4 +40,7 @@
 .datalist-toolbar .import-csv .form-container input {
     cursor: pointer;
 }
+.datalist-toolbar {
+	margin-left: -10px!important;
+}
 
