Добавлен div с id="yui-main-2", чтобы не дублировались id
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@476 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -80,6 +80,12 @@
     margin: 0;
 }
 
+#yui-main-2 {
+	float: right;
+	width: 100%;
+	margin-left: -25em;
+}
+
 /* Utils: start */
 .clear {
     height: 0;
