--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
@@ -1,21 +1,6 @@
-#lecm-menu .organization-menu #menu-buttons-employeesBtn span.first-child {
+#lecm-menu .statemachine-menu #menu-buttons-new-status span.first-child {
     background: url('../../images/lecm-orgstructure/orgstructure_32.png') no-repeat 4px 4px;
 }
-#lecm-menu .organization-menu #menu-buttons-staffBtn span.first-child {
-    background: url('../../images/lecm-orgstructure/orgstructure_32.png') no-repeat 4px 4px;
-}
-#lecm-menu .organization-menu #menu-buttons-orgstructureBtn span.first-child {
-    background: url('../../images/lecm-orgstructure/orgstructure_32.png') no-repeat 4px 4px;
-}
-#lecm-menu .organization-menu #menu-buttons-workGroupBtn span.first-child {
-    background: url('../../images/lecm-orgstructure/orgstructure_32.png') no-repeat 4px 4px;
-}
-#lecm-menu .organization-menu #menu-buttons-positionsBtn span.first-child {
-    background: url('../../images/lecm-orgstructure/orgstructure_32.png') no-repeat 4px 4px;
-}
-#lecm-menu .organization-menu #menu-buttons-rolesBtn span.first-child {
-    background: url('../../images/lecm-orgstructure/orgstructure_32.png') no-repeat 4px 4px;
-}
-#lecm-menu .organization-menu #menu-buttons-organizationBtn span.first-child {
+#lecm-menu .statemachine-menu #menu-buttons-machine-properties span.first-child {
     background: url('../../images/lecm-orgstructure/orgstructure_32.png') no-repeat 4px 4px;
 }
