--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -86,6 +86,11 @@
 	margin-left: -25em;
 }
 
+#yui-main-3 {
+    float: right;
+    width: 100%;
+    margin-left: -25em;
+}
 /* Utils: start */
 .clear {
     height: 0;
