Стилизация шаблона base-page; удален альфресковский футер
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@493 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-toolbar.css
+++ b/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-toolbar.css
@@ -4,7 +4,10 @@
     line-height: 24px;
 }
 .datalist-toolbar .left > div {
-    padding-right: 20px;
+    padding: 0 10px;
+}
+.datalist-toolbar .left > div:first-child {
+    padding-left: 5px;
 }
 .datalist-toolbar .exportcsv button {
     background: url(/share/res/components/images/task-16.png) no-repeat 5px 5px;
