--- a/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/all-dictionary-toolbar.css
+++ b/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/all-dictionary-toolbar.css
@@ -11,7 +11,10 @@
     line-height: 24px;
 }
 .datalist-toolbar .left > div {
-    padding-right: 20px;
+    padding: 0 10px;
+}
+.datalist-toolbar .left > div:first-child {
+    padding-left: 5px;
 }
 .datalist-toolbar .right {
     float: right;
