--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -35,6 +35,7 @@
     border: 1px solid #ccc;
     border-radius: 3px;
     padding-bottom: 0;
+    margin-bottom: 10px;
 }
 #bd #lecm-menu {
     width: 50px;
@@ -57,8 +58,18 @@
     margin: 5px 5px 5px 60px;
     position: relative;
 }
+#bd #lecm-content .toolbar .header-bar > div {
+    margin-top: 1px;
+}
+#bd #lecm-content .toolbar .header-bar div.divider {
+    width: 0;
+    height: 24px;
+    padding: 0;
+    margin-top: 2px;
+    border-right: 1px solid #999;
+}
 #bd #lecm-content-main {
-    margin-left: 5px;
+    margin: 0 5px;
 }
 #bd #lecm-content-ft {
     width: 100%;
@@ -111,11 +122,6 @@
     font-size: 16px;
     font-weight: bold
 }
-
-body{
-  margin-top:70px;
-}
-
 
 /*
 .logo{
@@ -308,6 +314,9 @@ h4 .lighter
 {
    background-color: #F9F9F9;
    border-color-top: #E3E3E3;
+}
+.yui-skin-lecmTheme .datagrid .datagrid-bar-bottom {
+   margin-top: 10px;
 }
 
 /* DASHLETS */
