Стилизация шаблона base-page;
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@494 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-toolbar.css
+++ b/lecm-dictionary/share/src/main/webapp/css/lecm-dictionary/dictionary-toolbar.css
@@ -1,3 +1,6 @@
+.datalist-toolbar {
+    margin: 0 -5px 0 -10px !important;
+}
 .datalist-toolbar .left,
 .datalist-toolbar .left > div,
 .datalist-toolbar .right {
@@ -42,8 +45,5 @@
 }
 .datalist-toolbar .import-csv .form-container input {
     cursor: pointer;
-}
-.datalist-toolbar {
-	margin-left: -10px!important;
 }
 
